fix code overflow

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -301,6 +301,7 @@ pre {
     background: #3f3f3f !important;
     border: none;
     border-radius: 3px;
+    overflow-x: auto;
   }
 }
 
